@@ -4,18 +4,20 @@
 #' cps_spct object.
 #'
 #' @note Note that scales are expanded so as to make space for the annotations.
-#' The object returned is a ggplot objects, and can be further manipulated.
+#'   The object returned is a ggplot object, and can be further manipulated.
+#'   When spct has more than one column with spectral data, each of these
+#'   columns is normalized individually.
 #'
 #' @param spct a cps_spct object
 #' @param w.band list of waveband objects
-#' @param range an R object on which range() returns a vector of length 2,
-#' with min annd max wavelengths (nm)
+#' @param range an R object on which range() returns a vector of length 2, with
+#'   min annd max wavelengths (nm)
 #' @param pc.out logical, if TRUE use percents instead of fraction of one
 #' @param label.qty character string giving the type of summary quantity to use
 #'   for labels
 #' @param annotations a character vector
 #' @param norm numeric normalization wavelength (nm) or character string "max"
-#' for normalization at the wavelength of highest peak.
+#'   for normalization at the wavelength of highest peak.
 #' @param ... other arguments
 #'
 #' @return a \code{ggplot} object.
@@ -36,27 +38,32 @@ cps_plot <- function(spct,
   if (!is.null(range)) {
     trim_spct(spct, range = range, byref = TRUE)
   }
+  cps.cols <- names(spct)[grep("^cps", names(spct))]
+  #  other.cols <- setdiff(names(x), cps.cols)
   if (is.null(norm)) {
     # we will use the original data
     scale.factor <- 1
-  } else if (!is.null(norm)) {
-    if (is.character(norm)) {
-      if (norm %in% c("max", "maximum")) {
-        idx <- which.max(spct[["cps"]])
-      } else {
-        warning("Invalid character '", norm, "'value in 'norm'")
+  } else {
+    for (col in cps.cols) {
+      if (is.character(norm)) {
+        if (norm %in% c("max", "maximum")) {
+          idx <- which.max(spct[[col]])
+        } else {
+          warning("Invalid character '", norm, "'value in 'norm'")
+          return(ggplot())
+        }
+        scale.factor <- 1 / as.numeric(spct[idx, col])
+        norm <- as.numeric(spct[idx, "w.length"])
+      } else if (is.numeric(norm) && norm >= min(spct) && norm <= max(spct)) {
+        scale.factor <- 1 / interpolate_spct(spct, norm)[[col]]
+      } else if (is.numeric(norm)) {
+        warning("'norm = ", norm, "' value outside spectral data range of ",
+                round(min(spct)), " to ", round(max(spct)), " (nm)")
         return(ggplot())
+      } else {
+        stop("'norm' should be numeric or character")
       }
-      scale.factor <- 1 / spct[idx, "cps"]
-      norm <- spct[idx, "w.length"]
-    } else if (is.numeric(norm) && norm >= min(spct) && norm <= max(spct)) {
-      scale.factor <- 1 / interpolate_spct(spct, norm)[["cps"]]
-    } else if (is.numeric(norm)) {
-      warning("'norm = ", norm, "' value outside spectral data range of ",
-              round(min(spct)), " to ", round(max(spct)), " (nm)")
-      return(ggplot())
-    } else {
-      stop("'norm' should be numeric or character")
+      spct[[col]] <-  spct[[col]] * scale.factor
     }
   }
 
@@ -80,10 +87,15 @@ cps_plot <- function(spct,
     cps.label <- ""
   }
 
-  spct[["cps"]] <- spct[["cps"]] * scale.factor
+  spct <- reshape2::melt(spct,
+                         id.vars = "w.length",
+                         measure.vars = cps.cols,
+                         variable.name = "scan",
+                         value.name = "cps")
+  setCpsSpct(spct, multiple.wl = length(cps.cols))
   y.max <- max(spct[["cps"]], na.rm = TRUE)
   y.min <- 0
-  plot <- ggplot(spct)  +
+  plot <- ggplot(spct) + aes_(linetype = ~scan) +
     scale_fill_identity() + scale_color_identity()
   plot <- plot + geom_line()
   plot <- plot + labs(x = "Wavelength (nm)", y = s.cps.label)
@@ -117,19 +129,19 @@ cps_plot <- function(spct,
 #' response_spct object.
 #'
 #' @note Note that scales are expanded so as to make space for the annotations.
-#' The object returned is a ggplot objects, and can be further manipulated.
+#'   The object returned is a ggplot objects, and can be further manipulated.
 #'
 #' @param x a cps_spct object
 #' @param ... other arguments passed along, such as \code{label.qty}
 #' @param w.band a single waveband object or a list of waveband objects
-#' @param range an R object on which range() returns a vector of length 2,
-#' with min annd max wavelengths (nm)
+#' @param range an R object on which range() returns a vector of length 2, with
+#'   min annd max wavelengths (nm)
 #' @param unit.out character IGNORED
 #' @param pc.out logical, if TRUE use percents instead of fraction of one
 #' @param label.qty character IGNORED
 #' @param annotations a character vector ("summaries" is ignored)
 #' @param norm numeric normalization wavelength (nm) or character string "max"
-#' for normalization at the wavelength of highest peak.
+#'   for normalization at the wavelength of highest peak.
 #'
 #' @return a \code{ggplot} object.
 #'
@@ -141,13 +153,15 @@ cps_plot <- function(spct,
 #'
 plot.cps_spct <-
   function(x, ...,
-           w.band = getOption("photobiology.plot.bands", default = list(UVC(), UVB(), UVA(), PAR())),
+           w.band = getOption("photobiology.plot.bands",
+                              default = list(UVC(), UVB(), UVA(), PAR())),
            range = NULL,
            unit.out = "cps",
            pc.out = FALSE,
            label.qty = "average",
            annotations = getOption("photobiology.plot.annotations",
-                                 default = c("boxes", "labels", "colour.guide", "peaks")),
+                                 default = c("boxes", "labels",
+                                             "colour.guide", "peaks")),
            norm = NULL ) {
     if ("color.guide" %in% annotations) {
       annotations <- c(setdiff(annotations, "color.guide"), "colour.guide")
